重点：通过nohup记录在jar出现内存溢出时，控制台输出的错误信息，会比HeapDumpOnOutOfMemoryError生成的.hprof文件，更加直接。